--- a/index.html
+++ b/index.html
@@ -18,21 +18,33 @@
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+<div class="content">
+  <form class="form">
+    <div class="form__fields">
+      <div class="form__field">
+        <label class="form__label" for="day_input">DAY</label>
+        <input numeric class="form__input" type="number" min="1" max="31" name="day" id="day_input" pattern="[0-9]{1,2}" required>
+      </div>
+      <div class="form__field">
+        <label class="form__label" for="month_input">MONTH</label>
+        <input class="form__input" type="number" min="1" max="12" name="day" id="month_input">
+      </div>
+      <div class="form__field">
+        <label class="form__label" for="year_input">YEAR</label>
+        <input class="form__input" type="number" min="1000" max="2023" name="day" id="year_input">
+      </div>
+    </div>
+    <button class="form__submit" type="submit"><img class="form__submit-icon" src="./assets/images/icon-arrow.svg"></button>
+    <div class="result">
+      <p class="result__p result__year"><span class="result__number result__year-number">38</span></p>
+      <p class="result__p result__month"><span class="result__number result__month-number">3</span></p>
+      <p class="result__p result__days"><span class="result__number result__day-number">26</span></p>
+    </div>
+  </form>
 
-<form class="form">
-  <div class="form__field">
-    <label class="form__label" for="day_input">DAY</label>
-    <input class="form__input" type="number" name="day" id="day_input">
-  </div>
-  <div class="form__field">
-    <label class="form__label" for="day_month">MONTH</label>
-    <input class="form__input" type="number" name="day" id="day_month">
-  </div>
-  <div class="form__field">
-    <label class="form__label" for="day_year">YEAR</label>
-    <input class="form__input" type="number" name="day" id="day_year">
-  </div>
-</form>
+</div>
+
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
